# signalforge-dev

./: .gitignore  LICENSE  README.md  components.json  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docker/: .env.example  .gitignore  docker-compose.yml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/php/: Dockerfile  php.ini
docker/www/: index.php
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  compose.rs  config.rs  dnsmasq.rs  docker.rs  filesystem.rs  lib.rs  main.rs  mkcert.rs  nginx.rs
src/assets/: network-visualization.css
src/components/: NetworkVisualization.vue  ServiceCard.vue  Sidebar.vue  StatsCard.vue
src/components/ui/badge/: Badge.vue
src/components/ui/button/: Button.vue
src/components/ui/card/: Card.vue  CardDescription.vue
src/components/ui/dialog/: Dialog.vue  DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogTitle.vue
src/components/ui/input/: Input.vue
src/components/ui/label/: Label.vue
src/components/ui/scroll-area/: ScrollArea.vue
src/components/ui/select/: Select.vue  SelectItem.vue
src/components/ui/separator/: Separator.vue
src/lib/: utils.ts
src/stores/: docker.ts  nginx.ts  project.ts  ssl.ts  tld.ts
src/views/: Config.vue  Dashboard.vue  Logs.vue  Network.vue  NginxConfig.vue  Projects.vue  Services.vue  SslManager.vue  System.vue  TldManager.vue
(+2 files in other folders)
