[package]
name = "signalforge-dev"
version = "0.1.0"
description = "A cross-platform Docker development environment manager"
authors = ["Signalforge"]
edition = "2021"

[lib]
name = "signalforge_dev_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bollard = "0.17"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
